# ffi-example

./: CMakeLists.txt  README.md
PythonFFI/: addTwoIntegers.pyd  ffi.py
src/: FFI.cc  addTwoIntegers.c
